<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	
	<EditText
	    android:id="@+id/id_et_email"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/email"
	    android:inputType="textEmailAddress"/>
	
	<EditText
	    android:id="@+id/id_et_password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/id_et_email"
	    android:inputType="textPassword" 
	    android:hint="@string/password"/>
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/id_et_password" >

		<Button
		    android:id="@+id/id_bt_submit"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/login" />
		
		<Button
		    android:id="@+id/id_bt_cancel"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/cancel" />    
	</LinearLayout>
	
</RelativeLayout>